Closed Bug 939475 Opened 11 years ago Closed 11 years ago

gcparam() help and error message do not mention markStackLimit

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: jruderman, Assigned: mz_mhs-ctb)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file, 2 obsolete files)

Assignee: nobody → mz_mhs-ctb
Status: NEW → ASSIGNED
Attached patch Patch (obsolete) — Splinter Review
I assume sliceTimeBudget also needs to be included.
Attachment #833395 - Flags: review?(luke)
The parameters listed still don't seem to match the list: http://mxr.mozilla.org/mozilla-central/source/js/src/builtin/TestingFunctions.cpp#259 Instead of duplicating this list in several places (which are sure to go stale before long), can you have a #define GC_PARAMETER_ARGS_LIST "maxBytes, maxMallocBytes, ..." right above/below the paramMap and used twice below?
Attached patch Patch (v2) (obsolete) — Splinter Review
Attachment #833395 - Attachment is obsolete: true
Attachment #833395 - Flags: review?(luke)
Attachment #8334237 - Flags: review?(luke)
Comment on attachment 8334237 [details] [diff] [review] Patch (v2) Review of attachment 8334237 [details] [diff] [review]: ----------------------------------------------------------------- Great! ::: js/src/builtin/TestingFunctions.cpp @@ +268,5 @@ > {"markStackLimit", JSGC_MARK_STACK_LIMIT} > }; > > +// Keep this in sync with above params. > +#define GC_PARAMETER_ARGS_LIST "maxBytes, maxMallocBytes, gcBytes, gcNumber, sliceTimeBudget, markStackLimit" Could you add a \n after this line? Also, could you insert " or " before markStackLimit?
Attachment #8334237 - Flags: review?(luke) → review+
Keywords: checkin-needed
Attachment #8334237 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: