Bug 939475 - Mention markStackLimit in gcparam() help and error. r=luke